# tymx

./: .gitignore  LICENSE  Pipfile  README.md  makefile  pyproject.toml
compose/base/: __init__.py  component_base.py  compose_page.py
compose/bulma/: __init__.py
mysite/: settings.py  urls.py
src/: setup.py
src/django_compose/: __init__.py
src/django_compose.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/django_compose/base/: __init__.py  _types.py  app.py  components.py  config.py  consumable.py  context.py  modifiers.py  page.py  router.py  theme.py  types.py
src/django_compose/base/attributes/: __init__.py  base_attributes.py  html_attributes.py  htmx_attributes.py
src/django_compose/base/components/: __init__.py  base_components.py  compose_components.py  html_components.py  interaction_components.py  templates.py
src/django_compose/base/helpers/: __init__.py  base_model.py  class_or_instance_method.py  converters.py  debug.py  decorators.py  model_base.py
src/django_compose/base/modifiers/: __init__.py  base_modifiers.py  compose_modifiers.py  debug_modifiers.py  extended_modifiers.py  modifiers.py
src/django_compose/base/views/: __init__.py  view_base.py
src/django_compose/bulma/: __init__.py  _colors.py  _elements.py  _flex.py  _helpers.py  _responsive.py  _spacing.py  _types.py  _typography.py
src/django_compose/bulma/components/: __init__.py  _types.py  interaction_components.py
src/django_compose/django/: django_router.py
src/tymx/: __init__.py
src/tymx/base/: __init__.py  app.py  config.py  consumable.py  context.py  router.py  theme.py  types.py
src/tymx/base/attributes/: __init__.py  base_attributes.py
src/tymx/base/components/: __init__.py  base_components.py  compose_components.py  html_components.py
src/tymx/base/helpers/: __init__.py  base_model.py  converters.py  (+3 more)
src/tymx/bulma/: __init__.py  _colors.py  _elements.py  _helpers.py  _spacing.py  _types.py  _typography.py
src/tymx/debug/: __init__.py  _app.py  _context.py
src/tymx/django/: __init__.py  _app.py  _helpers.py  _views.py
src/tymx/hx/: __init__.py  _helpers.py  _interaction.py  _state.py
testapp/: urls.py  views.py
testapp/components/: base.py
tests/testsite/: db.sqlite3  resolve_urls.py
tests/testsite/bulma/: app.py  urls.py
tests/testsite/testapp/: app.py  tests.py  urls.py  views.py
tests/testsite/testsite/: settings.py  urls.py
tests/unittests/: test_builder.py  test_components.py  test_context.py  test_hx.py  test_hx_interaction.py  test_matmul.py
(+19 files in other folders)
