[build-system]
requires = ["setuptools >= 77.0.3"]
build-backend = "setuptools.build_meta"

[project]
name = "django_compose"
version = "0.0.1"
authors = [
  { name="John Klein", email="johnklein.dev@gmail.com" },
]
description = "A small example package"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "MIT"
license-files = ["LICEN[CS]E*"]

[project.urls]
Homepage = "https://github.com/KleinJohn/django-compose"
Issues = "https://github.com/KleinJohn/django-compose/issues"

[tool.mypy]
disable_error_code = ["type-arg", "name-defined"]