[build-system]
requires = ["setuptools >= 77.0.3"]
build-backend = "setuptools.build_meta"

[project]
name = "django_compose"
version = "0.0.1"
authors = [
  { name="John Klein", email="johnklein.dev@gmail.com" },
]
description = "A small example package"
readme = "README.md"
requires-python = ">=3.12"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "MIT"
license-files = ["LICEN[CS]E*"]
dependencies = [
    "attrs>=26.1.0",
    "django>=5.2.11",
    "htpy>=25.12.0",
    "typing-extensions>=4.15.0",
]

[project.urls]
Homepage = "https://github.com/KleinJohn/django-compose"
Issues = "https://github.com/KleinJohn/django-compose/issues"

[dependency-groups]
dev = [
    "mypy>=1.19.1",
    "pre-commit>=4.5.1",
    "pytest>=9.0.2",
    "ruff>=0.15.4",
]

[tool.ruff]
target-version = "py312"
line-length = 100
[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "N",      # pep8-naming
    "UP",     # pyupgrade
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "SIM",    # flake8-simplify
    "TCH",    # flake8-type-checking
]
ignore = [
    "E501",   # line too long (handled by formatter)
]
[tool.ruff.lint.per-file-ignores]
"src/django_compose/base/components/html_components.py" = ["E742"]

[tool.mypy]
python_version = "3.12"
disable_error_code = ["type-arg", "name-defined", "misc", "valid-type", "import-untyped", "no-any-return"]
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_any_generics = true
check_untyped_defs = true
no_implicit_reexport = true
warn_redundant_casts = true
warn_unused_ignores = true
